fixes for backfill tests